--- a/code/experimento1/1treinamento_unet.ipynb
+++ b/code/experimento1/1treinamento_unet.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "ee303b5c",
    "metadata": {},
    "outputs": [
@@ -125,7 +125,7 @@
     "    \"NUM_EPOCHS\": 50,\n",
     "    \"IMAGE_HEIGHT\": 256, # Redimensionar imagens para um tamanho fixo\n",
     "    \"IMAGE_WIDTH\": 256,\n",
-    "    \"OPTIMIZER\": \"Adam\", # Opções: \"Adam\", \"SGD\"\n",
+    "    \"OPTIMIZER\": \"Adam\", # Opções: \"Adam\", \"SGD\" - investigar otimizar AUTO\n",
     "    \"LOSS_FUNCTION\": \"DiceBCE\" # Opções: \"BCE\", \"Dice\", \"DiceBCE\"\n",
     "}"
    ]
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "7f690dd0",
    "metadata": {},
    "outputs": [
@@ -318,6 +318,7 @@
     "data_transform = transforms.Compose([\n",
     "    transforms.ToTensor(),\n",
     "    transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225]),\n",
+    "    # o ideal é normalizar entre media e desvio padrão, talvez esses nao sejam os parametros ideais, investigar\n",
     "])\n",
     "\n",
     "mask_transform = transforms.Compose([\n",
