--- a/code/experimento6/1PSPNET.ipynb
+++ b/code/experimento6/1PSPNET.ipynb
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "ef9e83af",
    "metadata": {},
    "outputs": [
@@ -836,15 +836,13 @@
     "# ===================================================================\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "from torchvision import transforms\n",
     "from tqdm import tqdm\n",
     "import torch\n",
-    "import torch.nn.functional as F # Importação necessária para o redimensionamento\n",
+    "import torch.nn.functional as F\n",
     "\n",
     "# --- 1. CARREGAR DADOS E O MELHOR MODELO PSPNET ---\n",
-    "# (Esta parte do seu código está correta e foi mantida)\n",
     "print(f\"Carregando o melhor modelo PSPNet salvo de '{MODEL_SAVE_PATH}'...\")\n",
     "# Certifique-se que a função get_pspnet_model e as variáveis estão definidas\n",
     "analysis_model = get_pspnet_model(num_classes=1).to(DEVICE)\n",
@@ -855,10 +853,8 @@
     "\n",
     "\n",
     "# --- 2. GERAR GRÁFICOS DE TREINAMENTO ---\n",
-    "# (Esta parte do seu código está correta e foi mantida)\n",
     "print(\"Gerando gráficos de treinamento...\")\n",
     "fig, (ax1, ax2, ax3) = plt.subplots(3, 1, figsize=(12, 18))\n",
-    "# (Seu código de plots vai aqui, mantido como está)\n",
     "# Exemplo:\n",
     "# sns.lineplot(x='epoch', y='train_loss', data=log_df, ax=ax1, label='Train Loss')\n",
     "# sns.lineplot(x='epoch', y='val_iou', data=log_df, ax=ax2, label='Validation IoU')\n",
@@ -917,7 +913,6 @@
     "\n",
     "\n",
     "# --- 4. EXIBIR TABELA DE RESULTADOS FINAIS ---\n",
-    "# (Esta parte do seu código está correta e foi mantida)\n",
     "print(\"\\n\" + \"=\"*53)\n",
     "print(\"      RESULTADOS FINAIS DO MELHOR MODELO (PSPNet)\")\n",
     "print(\"=\"*53)\n",
@@ -927,7 +922,6 @@
     "\n",
     "\n",
     "# --- 5. VISUALIZAÇÃO QUALITATIVA DAS PREDIÇÕES ---\n",
-    "# (Esta parte do seu código está correta, mas adicionei o F.interpolate para consistência)\n",
     "print(\"Gerando visualizações de predições do melhor modelo PSPNet...\")\n",
     "inv_normalize = transforms.Normalize(mean=[-0.485/0.229, -0.456/0.224, -0.406/0.225], std=[1/0.229, 1/0.224, 1/0.225])\n",
     "val_images, val_masks = next(iter(val_loader))\n",
